Add more specificity to analytics button in css

--- a/packages/analytics/components/AnalyticsList/analytics.css
+++ b/packages/analytics/components/AnalyticsList/analytics.css
@@ -5,7 +5,7 @@ header > span > button {
 }
 /* With publish overriding analyze styles, this fixes the font-size of the drop-downs
 and tooltips in the components, and the compare-chart toggle */
-div > section span, button span, [data-highcharts-chart] div span  {
+div > section span, div span button span, [data-highcharts-chart] div span  {
   font-size: 0.75rem !important;
 }
 /* Fixes the padding of the hourly-chart dropdown  */
